[package]
name = "quiche"
version = "0.1.0"
authors = ["Alessandro Ghedini <alessandro@ghedini.me>"]
edition = "2018"
build = "src/build.rs"
description = "🥧 Savoury implementation of the QUIC transport protocol and HTTP/3"
repository = "https://github.com/cloudflare/quiche"
readme = "README.md"
keywords = ["quic", "http3"]
categories = ["network-programming"]
license = "BSD-2-Clause"
include = [
     "/*.md",
     "/*.toml",
     "/CODEOWNERS",
     "/COPYING",
     "/benches",
     "/deps/boringssl/**/*.[chS]",
     "/deps/boringssl/**/*.cc",
     "/deps/boringssl/**/*.errordata",
     "/deps/boringssl/**/*.go",
     "/deps/boringssl/**/*.pl",
     "/deps/boringssl/**/CMakeLists.txt",
     "/deps/boringssl/*.md",
     "/deps/boringssl/LICENSE",
     "/deps/boringssl/sources.cmake",
     "/examples",
     "/include",
     "/quiche.svg",
     "/src",
]

[features]
default = ["boringssl-vendored"]

# Build vendored BoringSSL library.
boringssl-vendored = []

# Generate pkg-config metadata file for libquiche.
pkg-config-meta = []

# Equivalent to "--cfg fuzzing", but can also be checked in build.rs.
fuzzing = []

[package.metadata.docs.rs]
default-features = false

[build-dependencies]
# cmake = "0.1"
cmake = { git = "https://github.com/alexcrichton/cmake-rs" }

[dependencies]
log = { version = "0.4", default_features = false  }
# libc = { version = "0.2", default_features = false }
libc = { path = "../libc", default_features = false }
# ring = { version = "0.16", default_features = false }
ring = { path = "../ring", default_features = false }
lazy_static = { version = "1", features = ["spin_no_std"] }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["wincrypt"] }

[dev-dependencies]
mio = "0.6"
url = "1"
docopt = "1"
criterion = "0.3"
# env_logger = "0.6"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "benches"
harness = false
